# pseudo-bank

./: Cargo.toml  LICENSE  README.md  out.csv  search-index.js  settings.html  source-files.js  test.csv
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
pseudo_bank/: all.html  fn.main.html  index.html  sidebar-items.js
pseudo_bank/model/: index.html  sidebar-items.js
pseudo_bank/model/account/: index.html  sidebar-items.js  struct.Account.html
pseudo_bank/model/error/: index.html  sidebar-items.js
pseudo_bank/model/id/: index.html  sidebar-items.js
pseudo_bank/model/transaction/: index.html  struct.Transaction.html
pseudo_bank/spreadsheet/: fn.read_spreadsheet.html  fn.write_spreadsheet.html  index.html  sidebar-items.js
pseudo_bank/store/: index.html  sidebar-items.js  struct.Store.html
src/: account.rs  client_id.rs  main.rs  spreadsheet.rs  store.rs  transaction.rs
src/model/: account.rs  mod.rs  transaction.rs  transaction_type.rs
src/model/error/: mod.rs  (+1 more)
src/pseudo_bank/: main.rs.html  spreadsheet.rs.html  store.rs.html
(+22 files in other folders)
