[package]
authors = ["Brandon Dyer <brandondyer64@gmail.com>"]
edition = "2018"
name = "pseudo-bank"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
indoc = "1.0.3"
rust_decimal = "1.10.3"
thiserror = "1.0.24"

[dependencies.serde]
features = ["derive"]
version = "1.0.124"
